# flux

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build2file  manifest  repositories.manifest
.github/workflows/: codecov.yml  codeql-analysis.yml  docs.yml  generate-single-header.yml  linux.yml  macos.yml  santizers.yml  windows.yml
benchmark/: CMakeLists.txt  brevzin_benchmark.cpp  flow.hpp  internal_iteration_benchmark.cpp  multidimensional_memset_benchmark.cpp  multidimensional_memset_benchmark_kernels.cpp  nanobench.cpp  ranges_cartesian_product.hpp  ranges_concat.hpp  sort_benchmark.cpp
build2/: bootstrap.build2  export.build2  root.build2
cmake/: FindSphinx.cmake  flux-config.cmake.in  modules.cmake
docs/: CMakeLists.txt  conf.py  index.rst  reference.rst  requirements.txt
docs/reference/: adaptors.rst  algorithms.rst  concepts.rst  config.rst  factories.rst  sequence_access.rst  sources.rst
example/: CMakeLists.txt  calendar.cpp  config_parser.cpp  histogram.cpp  merge_intervals.cpp  moving_average.cpp  prime_numbers.cpp  shortest_path.cpp  word_count.cpp
example/docs/: adjacent.cpp  adjacent_filter.cpp  all.cpp  any.cpp  assert.hpp  cartesian_power.cpp  cartesian_power_map.cpp  cartesian_product.cpp  cartesian_product_map.cpp  compare.cpp  contains.cpp  count.cpp  cursors.cpp  cycle.cpp  drop.cpp  ends_with.cpp  find_max.cpp  find_min.cpp  find_minmax.cpp  mask.cpp  prescan.cpp  read_only.cpp  repeat.cpp  scan.cpp  scan_first.cpp  set_difference.cpp  set_intersection.cpp  set_symmetric_difference.cpp  set_union.cpp  split.cpp  starts_with.cpp  unfold.cpp
example/top10/: 01_trapping_rain_water.cpp  02_max_consecutive_ones.cpp  03_longest_continuous_increasing_subsequence.cpp  04_maximum_subarray_sum.cpp  05_sushi_for_two.cpp  06_max_gap.cpp  07_max_gap_count.cpp  08_three_consecutive_odds.cpp  09_skyline.cpp  10_ocean_view.cpp  README.md
example/tutorials/: custom_adaptor.cpp
include/: build2file  flux.hpp
include/flux/: adaptor.hpp  algorithm.hpp  core.hpp  macros.hpp  ranges.hpp  sequence.hpp
include/flux/adaptor/: adjacent.hpp  adjacent_filter.hpp  cache_last.hpp  cartesian_base.hpp  cartesian_power.hpp  cartesian_power_map.hpp  cartesian_product.hpp  cartesian_product_map.hpp  chain.hpp  chunk.hpp  chunk_by.hpp  cursors.hpp  cycle.hpp  drop.hpp  drop_while.hpp  filter.hpp  filter_map.hpp  flatten.hpp  flatten_with.hpp  map.hpp  mask.hpp  permutations.hpp  permutations_base.hpp  permutations_sized.hpp  read_only.hpp  reverse.hpp  scan.hpp  scan_first.hpp  set_adaptors.hpp  sized_permutations.hpp  slide.hpp  split.hpp  split_string.hpp  stride.hpp  take.hpp  take_while.hpp  unchecked.hpp  zip.hpp
include/flux/algorithm/: all_any_none.hpp  compare.hpp  contains.hpp  count.hpp  ends_with.hpp  equal.hpp  fill.hpp  find.hpp  find_element.hpp  find_min_max.hpp  fold.hpp  for_each.hpp  for_each_while.hpp  inplace_reverse.hpp  minmax.hpp  output_to.hpp  search.hpp  sort.hpp  starts_with.hpp  swap_elements.hpp  to.hpp  write_to.hpp  zip_algorithms.hpp
include/flux/algorithm/detail/: heap_ops.hpp  pdqsort.hpp
include/flux/core/: as_range.hpp  assert.hpp  concepts.hpp  config.hpp  default_impls.hpp  functional.hpp  inline_iter_base.hpp  inline_sequence_base.hpp  iterable_concepts.hpp  lens_base.hpp  macros.hpp  numeric.hpp  operation_requirements.hpp  optional.hpp  predicates.hpp  ref.hpp  sequence_access.hpp  sequence_iterator.hpp  simple_sequence_base.hpp  slice.hpp  utils.hpp
include/flux/core/detail/: jtckdint.h
include/flux/op/: adjacent.hpp  adjacent_filter.hpp  all_any_none.hpp  begin_end.hpp  bounds_checked.hpp  cache_last.hpp  cartesian_base.hpp  cartesian_power.hpp  cartesian_power_map.hpp  cartesian_power_with.hpp  cartesian_product.hpp  cartesian_product_map.hpp  cartesian_product_repeat.hpp  cartesian_product_repeat_map.hpp  cartesian_product_with.hpp  chain.hpp  chunk.hpp  chunk_by.hpp  compare.hpp  contains.hpp  count.hpp  cursors.hpp  cycle.hpp  drop.hpp  drop_while.hpp  ends_with.hpp  equal.hpp  fill.hpp  filter.hpp  filter_map.hpp  find.hpp  find_min_max.hpp  flatten.hpp  flatten_with.hpp  fold.hpp  for_each.hpp  for_each_while.hpp  from.hpp  inplace_reverse.hpp  map.hpp  (+30 more)
include/flux/op/detail/: heap_ops.hpp  pdqsort.hpp
include/flux/ranges/: from_range.hpp  view.hpp
include/flux/sequence/: array_ptr.hpp  bitset.hpp  empty.hpp  generator.hpp  getlines.hpp  iota.hpp  istream.hpp  istreambuf.hpp  range.hpp  repeat.hpp  single.hpp  unfold.hpp
include/flux/source/: array_ptr.hpp  bitset.hpp  empty.hpp  generator.hpp  getlines.hpp  iota.hpp  istream.hpp  istreambuf.hpp  range.hpp  repeat.hpp  single.hpp  unfold.hpp
module/: CMakeLists.txt  flux.cpp
single_header/: flux.hpp
single_include/: flux.hpp
test/: CMakeLists.txt  build2file  catch.hpp  test_adjacent.cpp  test_adjacent_filter.cpp  test_adjacent_map.cpp  test_all_any_none.cpp  test_apply.cpp  test_array_ptr.cpp  test_bitset.cpp  test_bounds_checked.cpp  test_cache_last.cpp  test_cartesian_power.cpp  test_cartesian_power_map.cpp  test_cartesian_power_with.cpp  test_cartesian_product.cpp  test_cartesian_product_map.cpp  test_cartesian_product_repeat.cpp  test_cartesian_product_repeat_map.cpp  test_cartesian_product_with.cpp  test_chain.cpp  test_chunk.cpp  test_chunk_by.cpp  test_compare.cpp  test_concepts.cpp  test_contains.cpp  test_count.cpp  test_count_if.cpp  test_cursors.cpp  test_cycle.cpp  test_drop.cpp  test_drop_while.cpp  test_empty.cpp  test_ends_with.cpp  test_equal.cpp  test_fill.cpp  test_filter.cpp  test_filter_map.cpp  test_find.cpp  test_find_element.cpp  (+53 more)
test/build2/: root.build2
test/num/: test_casts.cpp  test_checked_ops.cpp  test_concepts.cpp  test_default_ops.cpp  test_overflowing_ops.cpp  test_unchecked_ops.cpp  test_wrapping_ops.cpp
tools/: CMakeLists.txt  make_single_header.cpp
