
function(ADD_EXAMPLE NAME SOURCE)
    add_executable(${NAME} ${SOURCE})
    target_link_libraries(${NAME} flux)
    add_test(NAME ${NAME} COMMAND ${NAME})
endfunction()

add_example(example-config-parser config_parser.cpp)
add_example(example-merge-intervals merge_intervals.cpp)
add_example(example-histogram histogram.cpp)
add_example(example-word-count word_count.cpp)
add_example(example-prime-numbers prime_numbers.cpp)

add_example(example-docs-adjacent docs/adjacent.cpp)
add_example(example-docs-all docs/all.cpp)
add_example(example-docs-any docs/any.cpp)
add_example(example-docs-compare docs/compare.cpp)
add_example(example-docs-contains docs/contains.cpp)
add_example(example-docs-count docs/count.cpp)
add_example(example-docs-drop docs/drop.cpp)
add_example(example-docs-ends-with docs/ends_with.cpp)
add_example(example-docs-prescan docs/prescan.cpp)
add_example(example-docs-scan docs/scan.cpp)
add_example(example-docs-scan-first docs/scan_first.cpp)
add_example(example-docs-starts-with docs/starts_with.cpp)
